--- a/MANUALHTML/cjoin1x.html
+++ b/MANUALHTML/cjoin1x.html
@@ -6,15 +6,6 @@
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
   <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
-  <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
-  <![endif]-->
-  <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
-  <![endif]-->
-  <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
-  <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
 <body>
@@ -29,90 +20,91 @@
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
               <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="fromcsv.html">fromcsv(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
+              <li><a href="marume.html">marume(1)</a></li>
+              <li><a href="tateyoko.html">tateyoko(1)</a></li>
+              <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
+              <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
+              <li><a href="loopj.html">loopj(1)</a></li>
+              <li><a href="ycat.html">ycat(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
+              <li><a href="mdate.html">mdate(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
+              <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="tocsv.html">tocsv(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="getlast.html">getlast(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
+              <li><a href="unmap.html">unmap(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="block_getlast.html">block_getlast(1)</a></li>
+              <li><a href="count.html">count(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="calsed.html">calsed(1)</a></li>
-              <li><a href="cap.html">cap(1)</a></li>
-              <li><a href="cgi-name.html">cgi-name(1)</a></li>
-              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
-              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
-              <li><a href="check_date_name.html">check_date_name(1)</a></li>
-              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
-              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
-              <li><a href="check_need_name.html">check_need_name(1)</a></li>
-              <li><a href="cjoin0.html">cjoin0(1)</a></li>
-              <li><a href="cjoin1.html">cjoin1(1)</a></li>
-              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
-              <li><a href="cjoin2.html">cjoin2(1)</a></li>
-              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
-              <li><a href="count.html">count(1)</a></li>
-              <li><a href="ctail.html">ctail(1)</a></li>
-              <li><a href="dayslash.html">dayslash(1)</a></li>
-              <li><a href="delf.html">delf(1)</a></li>
-              <li><a href="delr.html">delr(1)</a></li>
-              <li><a href="divsen.html">divsen(1)</a></li>
-              <li><a href="exist.html">exist(1)</a></li>
-              <li><a href="extname.html">extname(1)</a></li>
-              <li><a href="filehame.html">filehame(1)</a></li>
-              <li><a href="formhame.html">formhame(1)</a></li>
-              <li><a href="fpad.html">fpad(1)</a></li>
-              <li><a href="fromcsv.html">fromcsv(1)</a></li>
-              <li><a href="fsed.html">fsed(1)</a></li>
-              <li><a href="getfirst.html">getfirst(1)</a></li>
-              <li><a href="getlast.html">getlast(1)</a></li>
-              <li><a href="gyo.html">gyo(1)</a></li>
-              <li><a href="haba.html">haba(1)</a></li>
-              <li><a href="han.html">han(1)</a></li>
-              <li><a href="isdate.html">isdate(1)</a></li>
-              <li><a href="itouch.html">itouch(1)</a></li>
-              <li><a href="join0.html">join0(1)</a></li>
-              <li><a href="join1.html">join1(1)</a></li>
-              <li><a href="join1x.html">join1x(1)</a></li>
-              <li><a href="join2.html">join2(1)</a></li>
-              <li><a href="join2x.html">join2x(1)</a></li>
-              <li><a href="joinx.html">joinx(1)</a></li>
-              <li><a href="juni.html">juni(1)</a></li>
-              <li><a href="kasan.html">kasan(1)</a></li>
-              <li><a href="keta.html">keta(1)</a></li>
-              <li><a href="keycut.html">keycut(1)</a></li>
-              <li><a href="loopj.html">loopj(1)</a></li>
-              <li><a href="loopx.html">loopx(1)</a></li>
-              <li><a href="maezero.html">maezero(1)</a></li>
-              <li><a href="man2.html">man2(1)</a></li>
-              <li><a href="map.html">map(1)</a></li>
-              <li><a href="marume.html">marume(1)</a></li>
-              <li><a href="mdate.html">mdate(1)</a></li>
-              <li><a href="mime-read.html">mime-read(1)</a></li>
-              <li><a href="mojihame.html">mojihame(1)</a></li>
-              <li><a href="msort.html">msort(1)</a></li>
-              <li><a href="nameread.html">nameread(1)</a></li>
-              <li><a href="numchar.html">numchar(1)</a></li>
-              <li><a href="plus.html">plus(1)</a></li>
-              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="yarr.html">yarr(1)</a></li>
+              <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="zen.html">zen(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
-              <li><a href="rjson.html">rjson(1)</a></li>
-              <li><a href="self.html">self(1)</a></li>
-              <li><a href="selr.html">selr(1)</a></li>
-              <li><a href="sm2.html">sm2(1)</a></li>
-              <li><a href="sm4.html">sm4(1)</a></li>
-              <li><a href="sm5.html">sm5(1)</a></li>
-              <li><a href="tarr.html">tarr(1)</a></li>
-              <li><a href="tateyoko.html">tateyoko(1)</a></li>
-              <li><a href="tcat.html">tcat(1)</a></li>
-              <li><a href="tocsv.html">tocsv(1)</a></li>
-              <li><a href="uconv.html">uconv(1)</a></li>
-              <li><a href="ulock.html">ulock(1)</a></li>
-              <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
-              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
+              <li><a href="keycut.html">keycut(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
+              <li><a href="map.html">map(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
+              <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="self.html">self(1)</a></li>
               <li><a href="xmldir.html">xmldir(1)</a></li>
-              <li><a href="yarr.html">yarr(1)</a></li>
-              <li><a href="ycat.html">ycat(1)</a></li>
-              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="mime-read.html">mime-read(1)</a></li>
+              <li><a href="keta.html">keta(1)</a></li>
+              <li><a href="sm4.html">sm4(1)</a></li>
+              <li><a href="getfirst.html">getfirst(1)</a></li>
+              <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
-              <li><a href="zen.html">zen(1)</a></li>
+              <li><a href="cgi-name.html">cgi-name(1)</a></li>
+              <li><a href="sm5.html">sm5(1)</a></li>
+              <li><a href="sm2.html">sm2(1)</a></li>
+              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="join0.html">join0(1)</a></li>
+              <li><a href="kasan.html">kasan(1)</a></li>
+              <li><a href="uriencode.html">uriencode(1)</a></li>
+              <li><a href="tarr.html">tarr(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
+              <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="han.html">han(1)</a></li>
+              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
+              <li><a href="juni.html">juni(1)</a></li>
+              <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
+              <li><a href="plus.html">plus(1)</a></li>
               <li></li>
 
 <li></li>
@@ -140,7 +132,7 @@
 <p><code>cjoin1x</code> :  キーの値が同じレコードが複数存在するファイル同士を連結。</p>
 <h3>【書式】</h3>
 <pre class="list">Usage   : cjoin1x [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;master&gt; [&lt;tran&gt;]
-Version : Fri Jul 22 01:09:14 JST 2022</pre>
+Version : Mon Jun 19 23:20:45 JST 2023</pre>
 <h3>【説明】</h3>
 <p>テキストファイル<code>&lt;tran&gt;</code>の<code>&quot;key=&lt;n&gt;&quot;</code>で指定したキーフィールドがマスターファイル<code>&lt;master&gt;</code>の第１フィールド(キーフィールド)とマッチした行のみを<code>&lt;tran&gt;</code>から抽出して、<code>&lt;master&gt;</code>の情報を連結して出力します。連結は<code>&lt;tran&gt;</code>のキーフィールドの直後に<code>&lt;master&gt;</code>の内容のうちキーフィールド以外を挿入する形で行われます。</p>
 <p>複数のキーフィールドがある場合、<code>&lt;master&gt;</code>のキーフィールドは、<code>&lt;tran&gt;</code>のキーフィールドと同じ並びで、最小フィールドが１となるようスライドさせたキーフィールドとなります。例えば、<code>key=3/5</code>のときは、並び＝３フィールド連続したキー、なので、<code>&lt;master&gt;</code>は１から３連続したフィールド、つまり、第１から第３フィールドがキーとなります。</p>
@@ -181,9 +173,9 @@ $ cat data
 2 大阪2 梅田</pre>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Aug 12 19:24:01 JST 2022</div>
+    <div id="lastmodified">Last modified: MODIFIED</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
