--- a/MANUALHTML/delr.html
+++ b/MANUALHTML/delr.html
@@ -6,15 +6,6 @@
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
   <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
-  <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
-  <![endif]-->
-  <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
-  <![endif]-->
-  <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
-  <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
 <body>
@@ -29,90 +20,91 @@
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
               <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="fromcsv.html">fromcsv(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
+              <li><a href="marume.html">marume(1)</a></li>
+              <li><a href="tateyoko.html">tateyoko(1)</a></li>
+              <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
+              <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
+              <li><a href="loopj.html">loopj(1)</a></li>
+              <li><a href="ycat.html">ycat(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
+              <li><a href="mdate.html">mdate(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
+              <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="tocsv.html">tocsv(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="getlast.html">getlast(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
+              <li><a href="unmap.html">unmap(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="block_getlast.html">block_getlast(1)</a></li>
+              <li><a href="count.html">count(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="calsed.html">calsed(1)</a></li>
-              <li><a href="cap.html">cap(1)</a></li>
-              <li><a href="cgi-name.html">cgi-name(1)</a></li>
-              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
-              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
-              <li><a href="check_date_name.html">check_date_name(1)</a></li>
-              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
-              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
-              <li><a href="check_need_name.html">check_need_name(1)</a></li>
-              <li><a href="cjoin0.html">cjoin0(1)</a></li>
-              <li><a href="cjoin1.html">cjoin1(1)</a></li>
-              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
-              <li><a href="cjoin2.html">cjoin2(1)</a></li>
-              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
-              <li><a href="count.html">count(1)</a></li>
-              <li><a href="ctail.html">ctail(1)</a></li>
-              <li><a href="dayslash.html">dayslash(1)</a></li>
-              <li><a href="delf.html">delf(1)</a></li>
-              <li><a href="delr.html">delr(1)</a></li>
-              <li><a href="divsen.html">divsen(1)</a></li>
-              <li><a href="exist.html">exist(1)</a></li>
-              <li><a href="extname.html">extname(1)</a></li>
-              <li><a href="filehame.html">filehame(1)</a></li>
-              <li><a href="formhame.html">formhame(1)</a></li>
-              <li><a href="fpad.html">fpad(1)</a></li>
-              <li><a href="fromcsv.html">fromcsv(1)</a></li>
-              <li><a href="fsed.html">fsed(1)</a></li>
-              <li><a href="getfirst.html">getfirst(1)</a></li>
-              <li><a href="getlast.html">getlast(1)</a></li>
-              <li><a href="gyo.html">gyo(1)</a></li>
-              <li><a href="haba.html">haba(1)</a></li>
-              <li><a href="han.html">han(1)</a></li>
-              <li><a href="isdate.html">isdate(1)</a></li>
-              <li><a href="itouch.html">itouch(1)</a></li>
-              <li><a href="join0.html">join0(1)</a></li>
-              <li><a href="join1.html">join1(1)</a></li>
-              <li><a href="join1x.html">join1x(1)</a></li>
-              <li><a href="join2.html">join2(1)</a></li>
-              <li><a href="join2x.html">join2x(1)</a></li>
-              <li><a href="joinx.html">joinx(1)</a></li>
-              <li><a href="juni.html">juni(1)</a></li>
-              <li><a href="kasan.html">kasan(1)</a></li>
-              <li><a href="keta.html">keta(1)</a></li>
-              <li><a href="keycut.html">keycut(1)</a></li>
-              <li><a href="loopj.html">loopj(1)</a></li>
-              <li><a href="loopx.html">loopx(1)</a></li>
-              <li><a href="maezero.html">maezero(1)</a></li>
-              <li><a href="man2.html">man2(1)</a></li>
-              <li><a href="map.html">map(1)</a></li>
-              <li><a href="marume.html">marume(1)</a></li>
-              <li><a href="mdate.html">mdate(1)</a></li>
-              <li><a href="mime-read.html">mime-read(1)</a></li>
-              <li><a href="mojihame.html">mojihame(1)</a></li>
-              <li><a href="msort.html">msort(1)</a></li>
-              <li><a href="nameread.html">nameread(1)</a></li>
-              <li><a href="numchar.html">numchar(1)</a></li>
-              <li><a href="plus.html">plus(1)</a></li>
-              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="yarr.html">yarr(1)</a></li>
+              <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="zen.html">zen(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
-              <li><a href="rjson.html">rjson(1)</a></li>
-              <li><a href="self.html">self(1)</a></li>
-              <li><a href="selr.html">selr(1)</a></li>
-              <li><a href="sm2.html">sm2(1)</a></li>
-              <li><a href="sm4.html">sm4(1)</a></li>
-              <li><a href="sm5.html">sm5(1)</a></li>
-              <li><a href="tarr.html">tarr(1)</a></li>
-              <li><a href="tateyoko.html">tateyoko(1)</a></li>
-              <li><a href="tcat.html">tcat(1)</a></li>
-              <li><a href="tocsv.html">tocsv(1)</a></li>
-              <li><a href="uconv.html">uconv(1)</a></li>
-              <li><a href="ulock.html">ulock(1)</a></li>
-              <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
-              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
+              <li><a href="keycut.html">keycut(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
+              <li><a href="map.html">map(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
+              <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="self.html">self(1)</a></li>
               <li><a href="xmldir.html">xmldir(1)</a></li>
-              <li><a href="yarr.html">yarr(1)</a></li>
-              <li><a href="ycat.html">ycat(1)</a></li>
-              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="mime-read.html">mime-read(1)</a></li>
+              <li><a href="keta.html">keta(1)</a></li>
+              <li><a href="sm4.html">sm4(1)</a></li>
+              <li><a href="getfirst.html">getfirst(1)</a></li>
+              <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
-              <li><a href="zen.html">zen(1)</a></li>
+              <li><a href="cgi-name.html">cgi-name(1)</a></li>
+              <li><a href="sm5.html">sm5(1)</a></li>
+              <li><a href="sm2.html">sm2(1)</a></li>
+              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="join0.html">join0(1)</a></li>
+              <li><a href="kasan.html">kasan(1)</a></li>
+              <li><a href="uriencode.html">uriencode(1)</a></li>
+              <li><a href="tarr.html">tarr(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
+              <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="han.html">han(1)</a></li>
+              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
+              <li><a href="juni.html">juni(1)</a></li>
+              <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
+              <li><a href="plus.html">plus(1)</a></li>
               <li></li>
 
 <li></li>
@@ -135,35 +127,39 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-<h2>delr(1)</h2>
-<h3>【名前】</h3>
-<p><code>delr</code> :  フィールドが完全一致した行を除いて出力する</p>
-<h3>【書式】</h3>
-<pre class="list">Usage   : delr &lt;field&gt; &lt;str&gt; &lt;file&gt;
-Version : Sun Nov 21 17:29:32 JST 2021
-          Open usp Tukubai (LINUX+FREEBSD/PYTHON2.4/UTF-8)
-Edition : 1</pre>
-<h3>【説明】</h3>
-<p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致した行を除いて出力します。ファイル名が省略された時及び<code>&quot;-&quot;</code>の時は標準入力から入力します。</p>
-<h3>【例１】 指定したフィールドが完全一致した行を除いて出力する</h3>
-<pre class="prettyprint">$ cat data
+<h2>＜名前＞</h2>
+<p><code>delr</code> :  フィールドの非完全一致を見る</p>
+<pre class="prettyprint">＜書式＞
+Usage : delr &lt;field&gt; &lt;str&gt; [&lt;file&gt;]
+Version : Mon Jun 19 23:20:45 JST 2023
+
+＜説明＞
+引数のファイルのテキストデータより、指定したフィールドが
+指定した文字列と完全一致しない行を表示します。
+ファイル名が無いあるいは、&quot;-&quot; の時は、標準入力ファイルを
+期待します。
+
+＜例１ー１＞ 指定したフィールドが完全一致しない行のみ表示する
+$ cat data
 0001 a
 0002 b
 0003 c
 0004 c</pre>
-<pre class="prettyprint">$ delr 1 &quot;0001&quot; data
+<pre class="prettyprint">$ delr 1 &quot;0001&quot; data &gt; result
+$ cat result
 0002 b
 0003 c
 0004 c</pre>
-<h3>【例２】</h3>
-<pre class="prettyprint">$ delr 2 c data
+<p>＜例１ー２＞ </p>
+<pre class="prettyprint">$ delr 2 c &lt; data &gt; result
+$ cat result
 0001 a
 0002 b</pre>
     </div>
 
-    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
+    <div id="lastmodified">Last modified: MODIFIED</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2023 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
